--- a/app/src/main/res/layout/deals_list_item.xml
+++ b/app/src/main/res/layout/deals_list_item.xml
@@ -7,11 +7,12 @@
 
     <ImageView
         android:id="@+id/product_image"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-medium"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -47,10 +49,10 @@
         android:id="@+id/fulfillment_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="12sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/gray_color"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/sale_price_tv"
         app:layout_constraintTop_toBottomOf="@+id/sale_price_tv" />
 
@@ -58,11 +60,15 @@
         android:id="@+id/title_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center|start"
         android:maxLines="3"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintEnd_toEndOf="@+id/reg_price_tv"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/fulfillment_tv"
         app:layout_constraintTop_toBottomOf="@+id/fulfillment_tv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
