--- a/app/src/main/res/layout/deals_list_item.xml
+++ b/app/src/main/res/layout/deals_list_item.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="200dp">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="@+id/title_tv"
+        app:layout_constraintStart_toStartOf="@+id/product_image"
+        app:layout_constraintTop_toTopOf="parent" />
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="180dp"
@@ -29,7 +36,7 @@
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/red_color"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/product_image"
         app:layout_constraintTop_toTopOf="@+id/product_image" />
